# SayAi

./: .env.example  .gitignore  README.md  SayAi_Project_Blueprint.md  TUTORIAL-VPS.md  bootstrap-vps.sh  docker-compose.yml  install-vps-lengkap.sh  install.sh  pyproject.toml
.github/workflows/: ci.yml
deploy/k8s/: README.md
deploy/k8s/base/: deployment.yaml  hpa.yaml  pdb.yaml  service.yaml
docs/: PRIVATE_REPO_VPS.md  TUTORIAL.md  settings.pengguna-minimal.yaml  vps-sayai.service.example
sayai/: __main__.py  main.py
sayai/agents/: __init__.py  base.py  coder.py  reviewer.py  searcher.py  tester.py
sayai/cli/: __init__.py  admin.py  app.py  hunt_summary.py
sayai/config/: __init__.py  defaults.yaml  settings.py
sayai/db/: __init__.py  database.py  skill_store.py
sayai/llm/: __init__.py  client.py  cost_log.py  hooks.py  router.py
sayai/memory/: __init__.py  context.py  indexer.py  scratchpad.py  vector.py
sayai/orchestrator/: __init__.py  aggregator.py  dag.py  orchestrator.py  planner.py  pool.py  task.py
sayai/server/: __init__.py  health.py
sayai/skillhunter/: __init__.py  analyzer.py  hunter.py  models.py  notifier.py  prompts.py  rewriter.py  stack_profile.py
sayai/skillhunter/crawlers/: __init__.py  autoskills_map_crawler.py  awesome_crawler.py  (+4 more)
sayai/tools/: __init__.py  executor.py  lsp_tools.py  mcp_bridge.py
scripts/: sayai_chat.py
tests/: test_dag.py  test_health_server.py  test_hunt_summary.py  test_skill_store.py  test_skillhunter_extra_crawlers.py  test_smoke.py  test_stack_and_autoskills.py  test_tool_executor_args.py
