[project]
name = "sayai"
version = "0.1.0"
description = "AI Agentic Coding Platform — multi-agent, orchestrator, SkillHunter"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "litellm>=1.40.0",
    "textual>=0.61.0",
    "rich>=13.7.0,<14",
    "click>=8.1.7",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "anyio>=4.4.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    "aiofiles>=23.2.1",
    "qdrant-client>=1.9.0",
    "redis>=5.0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.7",
    "mypy>=1.10.0",
]

[project.scripts]
sayai = "sayai.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sayai"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
